--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -50,3 +50,37 @@
 .lightText {
   color: #666;
 }
+
+.board {
+  margin: auto;
+  width: 300px;
+  height: 350px;
+  padding: 10px;
+  background-color: #bdbdbd;
+  border: black;
+  border-style: solid;
+  border-radius: 5px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.square{
+  margin: auto;
+  width: 31%;
+  height: 27%;
+  margin: 1%;
+  background-color: lightblue;
+  font-size: 40px;
+  border-radius: 7px;
+}
+
+.reset{
+  width: 70%;
+  height: 10%;
+  background-color: rgb(77, 77, 77);
+  color: white;
+  font-size: 20px;
+  border-radius: 3px;
+  margin-top: 4%;
+  margin-left: 15%
+}
