--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,3 +1,54 @@
+.headbar {
+  box-sizing: border-box;
+  width: 100%;
+  height: 110px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  background-color: black;
+  position: sticky;
+  top: 0;
+}
+
+.logo {
+  margin-right: 10%;
+}
+
+.button19 {
+  background-color: #2c2c2c;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 1px;
+  border-color: white;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  margin: 5px;
+  margin-right: 30px;
+  text-align: center;
+  transform: translateZ(0);
+  width: 110px;
+  height: 80px;
+}
+
+.button19:hover {
+  filter: brightness(1.6);
+}
+
+.pageTitle {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 40px;
+  margin: 15%;
+  color: white;
+}
+
+
 .heading2Xl {
   font-size: 2.5rem;
   line-height: 1.2;
