--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,13 +1,15 @@
-.headbar {
+.navbar {
   box-sizing: border-box;
   width: 100%;
-  height: 110px;
+  height: 10%;
   display: flex;
   justify-content: left;
   align-items: center;
-  background-color: black;
-  position: sticky;
+  background-color: darkgrey;
+  opacity: 95%;
+  position: fixed;
   top: 0;
+  left: 0;
 }
 
 .logo {
@@ -15,9 +17,9 @@
 }
 
 .button19 {
-  background-color: #2c2c2c;
+  background-color: rgb(92, 92, 92);
   border: solid transparent;
-  border-radius: 16px;
+  border-radius: 8px;
   border-width: 1px;
   border-color: white;
   color: #FFFFFF;
@@ -31,7 +33,6 @@
   margin: 5px;
   margin-right: 30px;
   text-align: center;
-  transform: translateZ(0);
   width: 110px;
   height: 80px;
 }
