--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,9 +1,9 @@
 .navbar {
   box-sizing: border-box;
   width: 100%;
-  height: 10%;
+  height: 5vw;
   display: flex;
-  justify-content: left;
+  justify-content: space-between;
   align-items: center;
   background-color: darkgrey;
   opacity: 95%;
@@ -15,7 +15,13 @@
 }
 
 .logo {
-  margin-right: 10%;
+  margin-right: 3%;
+}
+
+.buttons {
+  margin-left: 1%;
+  margin-right: 1%;
+  justify-content: right;
 }
 
 .button19 {
@@ -26,17 +32,16 @@
   border-color: white;
   color: #FFFFFF;
   cursor: pointer;
-  display: inline-block;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 700;
   letter-spacing: .8px;
-  margin: 5px;
-  margin-right: 30px;
   text-align: center;
-  width: 110px;
+  width: auto;
+  min-width: 100px;
   height: 75px;
+  
 }
 
 .button19:hover {
@@ -47,7 +52,6 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 40px;
-  margin: 15%;
   color: white;
 }
 .pageTitle:hover{
